--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(../CSS/img/background-gamer.png);
+    background-image: url(../CSS/img/pexels-lucie-liz-3165335.jpg);
     background-repeat:no-repeat;
     -webkit-background-size:cover;
     -moz-background-size:cover;
